--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>Hello World</title>
+     <link rel="stylesheet" href="main.css">
+         <title>Hello World</title>
     </head>
     <body>
 
       <h1>Hello World</h1>
 
 
-    </body>
+</body>
 </html> 
