--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
     <head>
      <link rel="stylesheet" href="main.css">
-         <title>Hello World</title>
+     <script defer src="main.js"></script>
+         <title>Hello World!</title>
     </head>
     <body>
 
-      <h1>Hello World</h1>
+      <h1>Hello World!</h1>
 
 
 </body>
